--- a/ScriptEditor/ScriptEditor.csproj
+++ b/ScriptEditor/ScriptEditor.csproj
@@ -74,12 +74,14 @@
     <Compile Include="AboutBox.Designer.cs">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="AutoCompleteItem.cs" />
     <Compile Include="BatchCompiler.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="BatchCompiler.Designer.cs">
       <DependentUpon>BatchCompiler.cs</DependentUpon>
     </Compile>
+    <Compile Include="Compiler.cs" />
     <Compile Include="DraggableTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -97,6 +99,7 @@
     </Compile>
     <Compile Include="NativeMethods.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -115,6 +118,7 @@
     <Compile Include="SearchForm.Designer.cs">
       <DependentUpon>SearchForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="SettingsDialog.cs">
       <SubType>Form</SubType>
     </Compile>
